<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/vclose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:scaleType="center"
        android:layout_gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:layout_below="@+id/vclose"
        android:layout_marginLeft="10dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:shadowColor="#0088E3"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:layout_centerHorizontal="true"
        android:text="@string/Virtual_ID_Information"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />


    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:layout_below="@+id/textView"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:layout_centerHorizontal="true"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_palet_button_spinner"
        android:layout_below="@+id/one"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_below="@+id/one"
        android:layout_centerHorizontal="true"
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:layout_below="@+id/userName"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:layout_centerHorizontal="true"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_palet_button_spinner"
        android:layout_below="@+id/two"
        android:layout_marginTop="20dp"/>


    <TextView
        android:layout_below="@+id/two"
        android:id="@+id/txtEmailForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/three"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:layout_below="@+id/txtEmailForm"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:layout_centerHorizontal="true"
        android:text="@string/College_name"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />
    <View
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_palet_button_spinner"
        android:layout_below="@+id/three"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/txtCollegeForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/three"
        android:textColor="@color/black"/>

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/four"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:layout_below="@+id/txtCollegeForm"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="8"
        android:layout_centerHorizontal="true"
        android:text="@string/Virtual_ID"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold|italic" />

    <View
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_palet_button_spinner"
        android:layout_below="@+id/four"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtVirtualIDForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/four"
        android:textColor="@color/black"/>

</RelativeLayout>